--- a/Assignment1/courses.html
+++ b/Assignment1/courses.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="description" content="A webpage that maintains programmer's finished courses from term 1 and on-going courses for term 2 using JavaScript.">
-        <meta name="keywords" content="CST8285 lab assignment 1, HTML, CSS, Web Programming, JavaScript, js">
+        <meta name="keywords" content="HTML, CSS, Web Programming, JavaScript, js">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="author" content="Aira de Castro">
         <title>Courses - Aira de Castro</title>
