--- a/Assignment1/index.html
+++ b/Assignment1/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="description" content="A webpage that maintains the description about myself and Algonquin College.">
-        <meta name="keywords" content="CST8285lab3, CSS, Web Programming, html, landing page">
+        <meta name="keywords" content="CSS, Web Programming, html, landing page">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="author" content="Aira de Castro">
         <title>Home - Aira de Castro</title>
