--- a/Assignment1/resume.html
+++ b/Assignment1/resume.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="description" content="A webpage that showcases the programmer's resume information and html projects">
-        <meta name="keywords" content="CST8285lab3, CSS, Web Programming, html, resume, education, Program-Related Skills, Qualifications, Experiences and Academic Projects.">
+        <meta name="keywords" content="CSS, Web Programming, html, resume, education, Program-Related Skills, Qualifications, Experiences and Academic Projects.">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="author" content="Aira de Castro">
         <title>Resume - Aira de Castro</title>
