--- a/Lab4/inspiration.html
+++ b/Lab4/inspiration.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="description" content="A webpage that generates a random inspirational quote including .">
-        <meta name="keywords" content="CST8285lab4, CSS, Web Programming, html, javascript, inspirational quotes">
+        <meta name="keywords" content="CSS, Web Programming, html, javascript, inspirational quotes">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="author" content="Aira de Castro">
         <title>Inspirational</title>
