updated my website

--- a/PersonalPortfolio/index.html
+++ b/PersonalPortfolio/index.html
@@ -11,25 +11,26 @@
     </head>
     <body>
         <!-- Navigation Bar -->
-        <nav class="navBar">
-            <ul>
-            <li class="name">Aira de Castro</li>
-            <li><a href="courses.html">Courses</a></li>
-            <li><a href="resume.html">Resume</a></li>
-            <li><a href="index.html">Home</a></li>
-            </ul>
-        </nav>
-        <main class="bg">
-            <img src="images/IMG_7299.jpg" alt="Aira de Castro" class="aira">
-                <h1>Aira de Castro</h1>
-                    <p class="description">
+            <div class="navbar">
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="resume.html">Resume</a></li>
+                    <li><a href="courses.html">Courses</a></li>
+                </ul>
+            </div>
+        
+            <div class="rightcolumn">
+                <!-- <img src="images/IMG_7299.jpg" alt="Aira de Castro" class="aira"> -->
+                <p class="name">AIRA DE CASTRO</p>
+                    <!-- <p class="description">
                     A Computer Programming student at Algonquin College. <strong>Sociable, collaborative, and goal-driven 
                     </strong>with excellent communication skills, I'm an <strong>adventurous soul</strong> willing to take risks and explore 
                     new things. I sing, play instruments, play sports, and watch movies.
                     </p>
-        </main>
-        <footer>
+            </div> -->
+        
+        <!-- <footer>
             <address>deca0107@algonquinlive.com | Aira de Castro</address>
-        </footer>
+        </footer> -->
     </body>
 </html>
